--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
     <div class="summary">
       <div class="profile-image">
         <img 
-          sizes="40vw,
-                (min-width: 1024px) 512px"
+          sizes="(min-width: 1024px) 800px,
+                 (min-width: 720px) 400px,
+                 (min-width: 250px) 280px"
           srcset="img/1024profile.jpg 1920w, img/760profile.png 620w, img/320profile.png 280w"
-          src="img/320profile.png"      
+          src="img/320profile.png"    
+          alt="profile picture WIZARDRY. I don't even know why it's working DX"
         />      
       </div>
       <p>Hi! I'm a front-end devloper who loves responsive design and css. I recently finished a degree in front-end web devlopment at Treehouse and am excited to put all my skills to use!</p>
